# Homework

final_project/: README.md
final_project/apriltag_ros/apriltag_ros/config/: tags.yaml
final_project/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
final_project/husky/husky_description/: package.xml
final_project/husky/husky_description/meshes/: top_plate.dae
final_project/husky/husky_description/urdf/: husky.urdf.xacro  husky_backup.urdf.xacro
final_project/husky/husky_gazebo/: package.xml
final_project/multirotor_geometry_control/: README.md
final_project/multirotor_geometry_control/gps/include/: utm.h
final_project/multirotor_geometry_control/gps/src/: gpstest.cpp
final_project/multirotor_geometry_control/path_planner/include/: algorithm.h  bucketedqueue.h  collisiondetection.h  constants.h  dubins.h  dynamicvoronoi.h  gradient.h  helper.h  lookup.h  node2d.h  node3d.h  path.h  planner.h  point.h  smoother.h  vector2d.h  visualize.h
final_project/multirotor_geometry_control/path_planner/src/: algorithm.cpp  bucketedqueue.cpp  collisiondetection.cpp  dubins.cpp  dynamicvoronoi.cpp  main.cpp  node2d.cpp  node3d.cpp  path.cpp  planner.cpp  smoother.cpp  tf_broadcaster.cpp  visualize.cpp
final_project/multirotor_geometry_control/plottest/: CMakeLists.txt
finalproject/: README.md
finalproject/gps/: TRANSPORTATION.workspace
finalproject/offb/src/: geo.cpp  geo2.cpp
finalproject/path_planner/launch/: config2.rviz
finalproject/payload/src/: forceest.cpp  forceest.h  so3.cpp  ukf.cpp  ukf.h
finalproject/ukf/src/: force_estimate.cpp  forceest.cpp  forceest.h  ukf.cpp  ukf.h
hw1/: CMakeLists.txt  README.md  package.xml
hw1/launch/: muitisim.launch  turtle_setting.launch
hw1/src/: hw1.cpp
hw10/: HW10.docx  controller.m  param.m  quadsim.slxc  quadsim_sol.slx  readme.txt  trajectory.m
hw11/: CMakeLists.txt  README.md  package.xml
hw11/include/hw11/: kalman.h
hw11/src/: data.csv  kalman.cpp  kf_test.cpp  produce_data1.py
hw2/: CMakeLists.txt  README.md  package.xml
hw2/launch/: turtle.launch
hw2/src/: hw2.cpp  turtle_more.cpp
hw3/: CMakeLists.txt  Quadrotor.py  README.md  hw3.py  package.xml
hw3/src/: eigen_transform.cpp  eigen_tutorial.cpp
hw4/: BLS.m  HW4-1.xls  HW4-2.xls  HW4-2_solution.xlsx  README.md  untitled.m
hw5/: HW5.docx
hw6/: CMakeLists.txt  README.md  package.xml
hw6/src/: hw6.cpp
hw7/: CMakeLists.txt  README.md  package.xml
hw7/src/: tf_cf1.cpp  tf_cf2.cpp  tf_cf3.cpp  tf_cf4.cpp
hw8/: CMakeLists.txt  README.md  package.xml
hw8/src/: cere_solver_tutorial.cpp  cere_solver_tutorial2.cpp
hw9/: HW9 .docx  README.md  controller.m  quad_dynamics.m  quadsim.slx  quadsim.slxc  readme.txt  rotationM.m  trajectory.m
hw9/slprj/_jitprj/: ssWG5colRfJFsOktHa0Mv1F.l  ssWG5colRfJFsOktHa0Mv1F.mat
(+115 files in other folders)
